--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,32 +57,61 @@ a {
   a:visited {
     color: black; }
 
-@media only screen and (max-width: 600px) {
-  nav {
-    display: none !important; } }
-nav li {
-  padding: 1rem; }
+.mobile-menu {
+  position: fixed;
+  top: 1rem;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  width: 100%; }
+  .mobile-menu img {
+    width: 2rem;
+    height: 2rem; }
+
+.block {
+  display: block !important; }
+
+nav {
+  position: fixed;
+  z-index: 999;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 4rem;
+  height: 100vh;
+  display: none; }
+  nav ul {
+    justify-content: center;
+    text-align: center; }
+  nav li {
+    padding: 0.5rem; }
 
 header {
   background-image: url("../images/beach.jpg");
   height: 100vh;
   background-position: bottom;
   background-size: cover;
-  position: relative; }
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
 
 h1 {
-  font-size: 5.5rem;
+  font-size: 3rem;
   font-weight: bolder;
   color: #ffffff; }
-  @media only screen and (max-width: 600px) {
-    h1 {
-      font-size: 3rem; } }
+
+.section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  height: 100vh; }
 
 .section-one {
   background-image: url("../images/clouds.jpg");
-  height: 100vh;
-  background-position: bottom;
-  background-size: cover; }
+  background-position: bottom; }
   .section-one img {
     width: 25%; }
     @media only screen and (max-width: 600px) {
@@ -91,9 +120,7 @@ h1 {
 
 .section-two {
   background-image: url("../images/casual.jpg");
-  height: 100vh;
-  background-position: bottom;
-  background-size: cover; }
+  background-position: bottom; }
   .section-two img {
     width: 35%; }
     @media only screen and (max-width: 600px) {
@@ -103,6 +130,8 @@ h1 {
 footer {
   background-color: white;
   padding-top: 2rem;
-  padding-bottom: 2rem; }
+  padding-bottom: 2rem;
+  display: flex;
+  justify-content: center; }
 
 /*# sourceMappingURL=main.css.map */
