--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,8 @@ body, html {
   color: black; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: black; }
   a:hover {
     text-decoration: none; }
   a:visited {
