--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -65,9 +65,9 @@ header {
   justify-content: center;
 }
 h1 {
-  font-size: 3rem;
+  font-size: 2.75rem;
   font-weight: bolder;
-  color: #ffffff;
+  //color: #ffffff;
 }
 
 //Section Start ----- //
