--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -59,6 +59,7 @@ header {
   height: 100vh;
   background-position: bottom;
   background-size: cover;
+  background-repeat: no-repeat;
   position: relative;
   display: flex;
   align-items: center;
@@ -80,7 +81,7 @@ h1 {
 }
 
 .section-one {
-  background-image: url("../images/clouds.jpg");
+  background-image: url("../images/chill.jpg");
   background-position: bottom;
   img {
     width: 25%;
