--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,7 @@ nav {
     padding: 0.5rem; }
 
 header {
-  background-image: url("../images/beach.jpg");
+  background-image: url("../images/beach-two.jpg");
   height: 100vh;
   background-position: bottom;
   background-size: cover;
