--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -55,7 +55,7 @@ nav {
   }
 }
 header {
-  background-image: url("../images/beach.jpg");
+  background-image: url("../images/beach-two.jpg");
   height: 100vh;
   background-position: bottom;
   background-size: cover;
