--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,7 +19,7 @@ a {
   }
 }
 p {
-  font-size: 1.25rem;
+  font-size: 1rem;
 }
 
 //Header and Nav Section ----- //
@@ -129,6 +129,8 @@ h1 {
     font-size: 2rem;
     display: inline;
     margin-bottom: 2rem;
+    text-align: left;
+    width: 90%;
   }
   img {
     width: 100%;
