--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -141,7 +141,8 @@ h1 {
     margin-bottom: 2rem;
   }
   form {
-    width: 90%;
+    max-width: 90%;
+    margin: auto;
     label {
       display: block;
       margin-bottom: 8px;
