--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,10 +2,14 @@
 @import "partials/reset";
 
 //Base styles ---------- //
+*, *:before, *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 body,
 html {
   font-family: "Helvetica Neue";
-  box-sizing: border-box;
   color: black;
 }
 a {
