--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -144,44 +144,46 @@ h1 {
     width: 90%;
     margin-bottom: 2rem;
   }
-  .form-wrapper {
-    max-width: 90%;
-    margin: auto;
+}
+.form-wrapper {
+  max-width: 90%;
+  margin: auto;
+}
+form {
+  width: 100%;
+  label {
+    display: block;
+    margin-bottom: 8px;
+    font-size: 1.25rem;
   }
-  form {
-    label {
-      display: block;
-      margin-bottom: 8px;
-      font-size: 1.25rem;
-    }
-    fieldset {
-      padding: 0;
-      border: none;
-    }
-    input,
-    textarea {
-      background-color: #d4d4d4;
-      width: 100%;
-      display: inline;
-      border-radius: 5px;
-      border: none;
-      font-size: 1rem;
-      height: 6rem;
-    }
-    input {
-      height: 3.25rem;
-      margin-bottom: 1rem;
-    }
-    button {
-      width: 25%;
-      height: 3.25rem;
-      border: none;
-      border-radius: 5px;
-      background-color: black;
-      color: white;
-      font-size: 1.25rem;
-      margin-top: 1rem;
-    }
+  fieldset {
+    width: 100%;
+    padding: 0;
+    border: none;
+  }
+  input,
+  textarea {
+    background-color: #d4d4d4;
+    width: 100%;
+    //display: inline;
+    border-radius: 5px;
+    border: none;
+    font-size: 1rem;
+    height: 6rem;
+  }
+  input {
+    height: 3.25rem;
+    margin-bottom: 1rem;
+  }
+  button {
+    width: 25%;
+    height: 3.25rem;
+    border: none;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    font-size: 1.25rem;
+    margin-top: 1rem;
   }
 }
 
